// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="page-actions"
>
  <span>
    <span
      className="text-middle"
    >
      system.logs_level
      :
      <strong
        className="little-spacer-left"
      >
        INFO
      </strong>
    </span>
    <EditButton
      className="spacer-left button-small"
      id="edit-logs-level-button"
      onClick={[Function]}
    />
  </span>
  <Dropdown
    className="display-inline-block spacer-left"
    overlay={
      <ul
        className="menu"
      >
        <li>
          <a
            download="sonarqube_app.log"
            href="/api/system/logs?process=app"
            id="logs-link"
            rel="noopener noreferrer"
            target="_blank"
          >
            Main Process
          </a>
        </li>
        <li>
          <a
            download="sonarqube_ce.log"
            href="/api/system/logs?process=ce"
            id="ce-logs-link"
            rel="noopener noreferrer"
            target="_blank"
          >
            Compute Engine
          </a>
        </li>
        <li>
          <a
            download="sonarqube_es.log"
            href="/api/system/logs?process=es"
            id="es-logs-link"
            rel="noopener noreferrer"
            target="_blank"
          >
            Search Engine
          </a>
        </li>
        <li>
          <a
            download="sonarqube_web.log"
            href="/api/system/logs?process=web"
            id="web-logs-link"
            rel="noopener noreferrer"
            target="_blank"
          >
            Web Server
          </a>
        </li>
      </ul>
    }
  >
    <Button>
      system.download_logs
      <DropdownIcon
        className="little-spacer-left"
      />
    </Button>
  </Dropdown>
  <a
    className="button spacer-left"
    download="sonarqube-support-info-filesuffix(MyServerId).json"
    href="/api/system/info"
    id="download-link"
    onClick={[Function]}
    rel="noopener noreferrer"
    target="_blank"
  >
    system.download_system_info
  </a>
  <ContextConsumer>
    <Component />
  </ContextConsumer>
</div>
`;

exports[`should render correctly 2`] = `
<Dropdown
  className="display-inline-block spacer-left"
  overlay={
    <ul
      className="menu"
    >
      <li>
        <a
          download="sonarqube_app.log"
          href="/api/system/logs?process=app"
          id="logs-link"
          rel="noopener noreferrer"
          target="_blank"
        >
          Main Process
        </a>
      </li>
      <li>
        <a
          download="sonarqube_ce.log"
          href="/api/system/logs?process=ce"
          id="ce-logs-link"
          rel="noopener noreferrer"
          target="_blank"
        >
          Compute Engine
        </a>
      </li>
      <li>
        <a
          download="sonarqube_es.log"
          href="/api/system/logs?process=es"
          id="es-logs-link"
          rel="noopener noreferrer"
          target="_blank"
        >
          Search Engine
        </a>
      </li>
      <li>
        <a
          download="sonarqube_web.log"
          href="/api/system/logs?process=web"
          id="web-logs-link"
          rel="noopener noreferrer"
          target="_blank"
        >
          Web Server
        </a>
      </li>
    </ul>
  }
>
  <Button>
    system.download_logs
    <DropdownIcon
      className="little-spacer-left"
    />
  </Button>
</Dropdown>
`;

exports[`should render without restart and log download 1`] = `
<div
  className="page-actions"
>
  <span>
    <span
      className="text-middle"
    >
      system.logs_level
      :
      <strong
        className="little-spacer-left"
      >
        INFO
      </strong>
    </span>
    <EditButton
      className="spacer-left button-small"
      id="edit-logs-level-button"
      onClick={[Function]}
    />
  </span>
  <a
    className="button spacer-left"
    download="sonarqube-support-info-filesuffix().json"
    href="/api/system/info"
    id="download-link"
    onClick={[Function]}
    rel="noopener noreferrer"
    target="_blank"
  >
    system.download_system_info
  </a>
</div>
`;
